--- a/Assignments/NDH802-Assignment1-students.Rmd
+++ b/Assignments/NDH802-Assignment1-students.Rmd
@@ -6,6 +6,7 @@ output: pdf_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+rm(list=ls())
 ```
 
 ------------------------------------------------------------------------
@@ -56,18 +57,12 @@ Please refer to Canvas, Hand-in 1 for more details about the data set.
 ```
 
 (c) Compute the mean and variance of `value`, `deals`, `points`. Be careful, variance is **different from** standard deviation. (1p)
-
-    ```{r}
-    mean(df$value)
-    ```
-
 (d) Compute the mean and variance of `value`, `deals`, `points` of the *loyal* customers. (1p)
-
 (e) Compute the mean and variance of `value`, `deals`, `points` of the *loyal* customers who *made at least one offline purchase*. (1p)
 
 ### Question 2. Probability theory
 
-(a) How many loyal customers and not loyal customer do you have in your `df`? (1p)
+(a) How many loyal customers and not loyal customer do you have in your `df`? Formally, compute $N_{loyal}$ and $N_{\overline{loyal}}$ . (1p)
 
 | For Q2b-f, consider the following events in your `df`:
 
@@ -79,13 +74,13 @@ Please refer to Canvas, Hand-in 1 for more details about the data set.
 >
 > (E4) Made at least one online purchase
 
-1.  Are E1 and E2 mutually exclusive? Why/why not? (1p)
-2.  Are E1 and E2 collectively exhaustive? Why/why not? (1p)
-3.  Are E3 and E4 mutually exclusive? Why/why not? (1p)
-4.  Are E3 and E4 collectively exhaustive? Why/why not? (1p)
-5.  Are E1 and E4 mutually exclusive? Why/why not? (1p)
+(b) Are E1 and E2 mutually exclusive? Why/why not? (1p)
+(c) Are E1 and E2 collectively exhaustive? Why/why not? (1p)
+(d) Are E3 and E4 mutually exclusive? Why/why not? (1p)
+(e) Are E3 and E4 collectively exhaustive? Why/why not? (1p)
+(f) Are E1 and E4 mutually exclusive? Why/why not? (1p)
 
-| For Q2b-f, you can write the solutions using formulas, words, Venn diagrams, code, numbers or the combination of them, whichever expresses your rationales the best. If you find handwriting more convenient, feel free to do so and attach a photo of it in the submission.
+> For Q2b-f, you can write the solutions using formulas, words, Venn diagrams, code, numbers or the combination of them, whichever expresses your rationales the best. If you find handwriting more convenient, feel free to do so and attach a photo of it in the submission.
 
 \vfill
 
