--- a/Preps/Before_Live_1/NDH802-HelloR.Rmd
+++ b/Preps/Before_Live_1/NDH802-HelloR.Rmd
@@ -69,13 +69,23 @@ my_variance = ((9-my_mean)^2 + (10-my_mean)^2 + (7-my_mean)^2)/(my_n-1)
 ```
 
 Here, I just type in the exact formula in Canvas. The mean of my assignments points is `r my_mean`. The variance of my assignments points is `r my_variance`.
+```{r}
+Evelinas_n = 5
+Evelinas_mean = (10+20+30+40+50)/Evelinas_n
+Evelinas_variance = ((10-Evelinas_mean)^2+(20-Evelinas_mean)^2+(30-Evelinas_mean)^2+(40-Evelinas_mean)^2+(50-Evelinas_mean)^2)/(Evelinas_n-1)
+Evelinas_mean
+Evelinas_variance
+```
+
 
 **Your turn.** Compute the **mean** and **variance** of *the number of hearts/likes* you get from the most 5 recent Intagram/Facebook posts (or all of your posts if you have less than 5). If you want to keep it a secret, you can compute the **mean** and **variance** of *the number of hearts* @centerforretailing get from the most 5 recent Instagram posts.
 
 ```{r}
-your_n = 5
-your_mean 
-your_variance
+Evelinas_n = 5
+Evelinas_mean = (10+20+30+40+50)/Evelinas_n
+Evelinas_variance = ((10-Evelinas_mean)^2+(20-Evelinas_mean)^2+(30-Evelinas_mean)^2+(40-Evelinas_mean)^2+(50-Evelinas_mean)^2)/(Evelinas_n-1)
+Evelinas_mean
+Evelinas_variance
 ```
 
 If you are like, *"Why do I have to do this while it's equally easy to do it with a calculator?"*. Fair point. In the live session, we will learn how to do it the more time- and energy-efficient way. Plus, when you need to work with 1,000,000 rows of data , your calculator is no longer your best friend. Case in point, your upcoming assignments.
