--- a/Assignments/NDH802-Assignment2-students.Rmd
+++ b/Assignments/NDH802-Assignment2-students.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "NDH802 - Assignment 2"
 author: "Group no."
-output: pdf_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -30,7 +30,7 @@ Set your working directory
 #setwd("")
 ```
 
-Run this code chunk to load data into your R Environment. The command will randomly select 1,000,000 rows of data from the original data set. \textcolor{red}{Fill in your group number within `set.seed()`.} For example, if you are group 3, make it `set.seed(3)`. Hereby each and every group should have a unique `df`. Accordingly, your results should be different from other groups' and you should not be comparing them.\
+Run this code chunk to load data into your R Environment. The command will randomly select 1,000,000 rows of data from the original data set. [Fill in your group number within `set.seed()`]{.ul}. For example, if you are group 3, make it `set.seed(3)`. Hereby each and every group should have a unique `df`. Accordingly, your results should be different from other groups' and you should not be comparing them.\
 *Note*. If you make the wrong seed, your assignment will **not** be graded.
 
 ```{r}
@@ -55,20 +55,28 @@ Please refer to Canvas, Hand-in 2 for more details about the data set.
     Formally, compute $P(\text{loyal} = 1 \mid \text{channeltype} = \text{offlineonly})$. (1p)
 (d) What is the probability of shopping only offline, given the loyal customers?\
     Formally, compute $P(\text{channeltype} = \text{offlineonly}\mid \text{loyal} = 1)$. (1p)
-(e) Compare the results of (c) and (d). Are they similar/different? Should they? Why/why not?\
-    You can use mathematical formula, words, venn diagrams or the combination of them, whichever expresses your rationales the best. If you find handwriting is more convenient, feel free to do so and attach a photo of it in the submission.(2p)
+(e) What is the probability that a randomly chosen customer will be a loyal customer who only shop offline? Formally, compute $P(\text{channeltype} = \text{offlineonly}\cap \text{loyal} = 1)$. (1p)
+(f) Compare the results of (c), (d) and (e). Are they similar/different? Should they? Why/why not?\
+    You can use mathematical formula, words, venn diagrams or the combination of them, whichever expresses your rationales the best. If you find handwriting is more convenient, feel free to do so and attach a (readable) photo in the submission.(1p)
 
 ### Question 2. Continuous distribution
 
 Let $X$ (measured in cm) denote the height of all the Swedes in 2021. Assume $X \sim N(\mu = 175, \sigma^2 = 20)$.\
-Be carefull, the argument `sd` in `pbinom()` is standard deviation. Standard deviation is *different* from variance.
+Be careful, the argument `sd` in `pnorm()` is standard deviation. Standard deviation is *different* from variance.
 
-(a) What is the probability that a random Swede is shorter than 172cm? (1p)
-(b) What is the probability that a random Swede is taller than 177cm? (1p)
-(c) What is the probability that a random Swede is from 172cm to 177cm tall? (1p)
-(d) What is the cut point of the top 5% tallest Swedes (i.e., find the height of the shortest Swede among the top 5% tallest)? (1p)
-(e) Find the shortest range such that the probability is 90% that the height of Swedes will fall in this range. (1p)
-(f) What is the probability that a random Swede is exactly 175 cm tall? Justify your answer. *Hint*: This is a trick question. (1p)
+(a) What is the probability that a random Swede is shorter than 172cm? (0.5p)
+
+    What is the probability that a random Swede is taller than 178cm? (0.5p)
+
+(b) Compare the results you got from (a). Are they similar/different? Why? (1p)
+
+(c) What is the probability that a random Swede is from 172cm to 178cm tall? (1p)
+
+(d) What is the probability that a random Swede is exactly 175 cm tall? Justify your answer. *Hint*: This is a trick question. (1p)
+
+(e) What is the cut point of the top 5% tallest Swedes (i.e., find the height of the shortest Swede among the top 5% tallest)? (1p)
+
+(f) Find the shortest range such that the probability is 90% that the height of Swedes will fall in this range. (1p)
 
 \vfill
 
